# marlin

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  ROADMAP.md  TODO.md  book.toml  deny.toml  prepare-release.sh  release-please-config.json
.github/: labels.yaml  release-please-config.json
.github/workflows/: cargo-deny.yaml  ci.yaml  docs.yaml  labeler.yaml  lint.yaml  pr.yaml  release.yaml
book/: README.md  SUMMARY.md  getting_started.md  introduction.md  name.md
book/internal/: about-internal.md  how-it-works.md  release-process.md  verilator-runtime.md
book/js/: spade-highlight.js  verilog-highlight.js
book/reference/: bridging-macros.md  model-traits.md  vcd.md
book/spade/: quickstart.md
book/verilog/: dpi.md  dynamic.md  quickstart.md  reference.md  tutorials.md  usage.md  vcd.md
book/verilog/reference/: bridging-macros.md  model-traits.md  vcd.md
book/veryl/: quickstart.md
docs/: ROADMAP.md  TODO.md  testing_spade.md  testing_verilog.md  verilog_dpi.md  verilog_dynamic_models.md
examples/spade-project/: Cargo.toml
examples/spade-project/src/: lib.rs  main.spade
examples/spade-project/test/: simple_test.rs
examples/spade-project/tests/: simple_test.rs
examples/verilog-project/: Cargo.toml
examples/verilog-project/src/: dpi.sv  lib.rs  main.sv  more_dpi.sv  parse_var.sv  tutorial.rs
examples/verilog-project/test/: dpi_tutorial.rs  dynamic_model_tutorial.rs  tutorial.rs  visibility_works.rs
examples/verilog-project/tests/: as_dynamic_model.rs  dpi_tutorial.rs  dynamic_model_tutorial.rs  simple_test.rs  tracing.rs  visibility_works.rs
examples/veryl_project/: .gitignore  Cargo.toml  Veryl.toml  veryl_project.f
examples/veryl_project/src/: lib.rs  main.veryl
examples/veryl_project/tests/: simple_test.rs
language-support/spade/: Cargo.toml
language-support/spade-macro/: Cargo.toml
language-support/spade-macro/src/: lib.rs
language-support/spade/src/: lib.rs
language-support/verilog/: Cargo.toml
language-support/verilog-macro/: Cargo.toml
language-support/verilog-macro-builder/: Cargo.toml
language-support/verilog-macro-builder/src/: lib.rs
language-support/verilog-macro/src/: lib.rs
language-support/verilog/src/: lib.rs
language-support/veryl/: Cargo.toml
language-support/veryl-macro/: Cargo.toml
language-support/veryl-macro/src/: lib.rs
language-support/veryl/src/: lib.rs
marlin/: Cargo.toml
marlin/src/: lib.rs
spade-support/example-project/test/: Cargo.toml
spade-support/example-project/test/src/: main.rs
spade-support/spade/: Cargo.toml
spade-support/spade-macro/: Cargo.toml
spade-support/spade-macro/src/: lib.rs
spade-support/spade/src/: lib.rs
spade/spade/: Cargo.toml
spade/spade-macro/: Cargo.toml
spade/spade-macro/src/: lib.rs
spade/spade/src/: lib.rs
src/: lib.rs
test_crate/: Cargo.toml  build.rs
test_crate/src/: main.rs
test_crate/sv/: main.sv
test_crates/test_crate/: Cargo.toml
test_crates/test_crate/src/: main.rs
test_crates/test_swim/: swim.toml
test_crates/test_swim/src/: main.spade
test_crates/test_swim/test_swim_crate/: Cargo.toml
test_crates/test_swim/test_swim_crate/src/: main.rs
tooling/swim-marlin/: Cargo.toml  README.md
tooling/swim-marlin/resources/: test_template.rs
tooling/swim-marlin/src/: main.rs
verilator/: Cargo.toml
verilator/src/: build_library.rs  dpi.rs  dynamic.rs  lib.rs  vcd.rs
verilog-support/example-project/: Cargo.toml
verilog-support/example-project/src/: dpi_tutorial.rs  dynamic_model.rs  dynamic_model_tutorial.rs  main.rs
verilog-support/example-project/sv/: dpi.sv
verilog-support/verilog/: Cargo.toml
verilog-support/verilog-macro/: Cargo.toml
verilog-support/verilog-macro-builder/: Cargo.toml
verilog-support/verilog-macro-builder/src/: lib.rs
verilog-support/verilog-macro/src/: lib.rs  util.rs
verilog-support/verilog/src/: lib.rs
verilog/verilog/: Cargo.toml
verilog/verilog-macro/: Cargo.toml
verilog/verilog-macro-builder/: Cargo.toml
verilog/verilog-macro-builder/src/: lib.rs  util.rs
verilog/verilog-macro/src/: lib.rs
verilog/verilog/src/: lib.rs
veryl_project/src/: main.sv  main.sv.map
