[workspace]
resolver = "2"
members = [
  "verilator",
  "language-support/verilog",
  "language-support/verilog-macro",
  "language-support/verilog-macro-builder",
  "language-support/spade",
  "language-support/spade-macro",
  "examples/verilog-project",
  "examples/spade-project",
]

[workspace.package]
version = "0.2.0"
authors = ["Ethan Uppal"]
edition = "2021"
rust-version = "1.83"
description = "🦀 No nonsense hardware testing in Rust 🛠️"
repository = "https://github.com/ethanuppal/marlin"
readme = "README.md"
license = "MPL-2.0"

[workspace.dependencies]
snafu = "0.8.5"
camino = "1.1.9"
libc = "0.2.169"
libloading = "0.8.6"
proc-macro2 = "1.0.93"
syn = { version = "2.0.96", features = ["full"] }
quote = "1.0.38"
sv-parser = "0.13.3"
spade-parser = "0.13.0"
spade-ast = "0.13.0"
log = "0.4.25"
colog = "1.3.0"
argh = "0.1.13"
toml = "0.8.20"
owo-colors = "4.1.0"
glob = "0.3.2"
file-guard = "0.2.0"
indicatif = "0.17.11"

marlin-verilator = { path = "verilator", version = "0.2.0" }
marlin-verilog = { path = "language-support/verilog", version = "0.2.0" }
marlin-verilog-macro = { path = "language-support/verilog-macro", version = "0.2.0" }
marlin-verilog-macro-builder = { path = "language-support/verilog-macro-builder", version = "0.2.0" }
marlin-spade = { path = "language-support/spade", version = "0.2.0" }
marlin-spade-macro = { path = "language-support/spade-macro", version = "0.2.0" }

[package]
name = "marlin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
# include = ["README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
verilog = []
spade = []

[dependencies]
marlin-verilator.workspace = true
marlin-verilog.workspace = true
marlin-verilog-macro.workspace = true
marlin-verilog-macro-builder.workspace = true
marlin-spade.workspace = true
marlin-spade-macro.workspace = true
