[workspace]
resolver = "2"
members = [
  "verilator",
  "language-support/verilog",
  "language-support/verilog-macro",
  "language-support/verilog-macro-builder",
  "language-support/spade",
  "language-support/spade-macro",
  "examples/verilog-project",
  "examples/spade-project",
]

[workspace.package]
version = "0.2.1"
authors = ["Ethan Uppal"]
edition = "2021"
rust-version = "1.83"
description = "🦀 No nonsense hardware testing in Rust 🛠️"
repository = "https://github.com/ethanuppal/marlin"
readme = "README.md"
license = "MPL-2.0"

[workspace.dependencies]
snafu = { version = "0.8.5", default-features = false, features = ["std"] }
camino = { version = "1.1.9", default-features = false }
libc = { version = "0.2.169", default-features = false }
libloading = { version = "0.8.6", default-features = false }
proc-macro2 = { version = "1.0.93", default-features = false }
syn = { version = "2.0.96", features = ["full"] }
quote = { version = "1.0.38", default-features = false }
sv-parser = { version = "0.13.3", default-features = false }
spade-parser = { version = "0.13.0", default-features = false }
spade-ast = { version = "0.13.0", default-features = false }
log = { version = "0.4.25", default-features = false }
colog = { version = "1.3.0", default-features = false }
argh = { version = "0.1.13", default-features = false }
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
owo-colors = { version = "4.1.0", default-features = false }
glob = { version = "0.3.2", default-features = false }
file-guard = { version = "0.2.0", default-features = false }
indicatif = { version = "0.17.11", default-features = false }
dashmap = { version = "6.1.0", default-features = false }

marlin-verilator = { path = "verilator", version = "0.2.1" }
marlin-verilog = { path = "language-support/verilog", version = "0.2.1" }
marlin-verilog-macro = { path = "language-support/verilog-macro", version = "0.2.1" }
marlin-verilog-macro-builder = { path = "language-support/verilog-macro-builder", version = "0.2.1" }
marlin-spade = { path = "language-support/spade", version = "0.2.1" }
marlin-spade-macro = { path = "language-support/spade-macro", version = "0.2.1" }

[package]
name = "marlin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
# include = ["README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
verilog = []
spade = []

[dependencies]
marlin-verilator.workspace = true
marlin-verilog.workspace = true
marlin-verilog-macro.workspace = true
marlin-verilog-macro-builder.workspace = true
marlin-spade.workspace = true
marlin-spade-macro.workspace = true
