[workspace]
resolver = "3"
members = [
  "verilator",
  "language-support/verilog",
  "language-support/verilog-macro",
  "language-support/verilog-macro-builder",
  "language-support/spade",
  "language-support/spade-macro",
  "language-support/veryl",
  "language-support/veryl-macro",
  "examples/verilog-project",
  "examples/spade-project",
  "examples/veryl_project",
]

[workspace.package]
version = "0.3.2"
authors = ["Ethan Uppal"]
edition = "2024"
rust-version = "1.85"
description = "🦀 No nonsense hardware testing in Rust 🛠️"
repository = "https://github.com/ethanuppal/marlin"
readme = "README.md"
license = "MPL-2.0"

[workspace.dependencies]
# see deny.toml for justification for all dependencies
snafu = { version = "0.8.5", default-features = false, features = ["std"] }
camino = { version = "1.1.9", default-features = false }
libc = { version = "0.2.169", default-features = false }
libloading = { version = "0.8.6", default-features = false }
log = { version = "0.4.25", default-features = false }
env_logger = { version = "0.11.6", default-features = false }
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
owo-colors = { version = "4.1.0", default-features = false }
glob = { version = "0.3.2", default-features = false }
file-guard = { version = "0.2.0", default-features = false }
dashmap = { version = "6.1.0", default-features = false }
boxcar = { version = "0.2.10", default-features = false }
veryl-parser = { version = "0.14.2-rc.1", default-features = false }

proc-macro2 = { version = "1.0.93", default-features = false }
syn = { version = "2.0.96", features = ["full"] }
quote = { version = "1.0.38", default-features = false }

sv-parser = { version = "0.13.3", default-features = false }
spade-parser = { version = "0.13.0", default-features = false }
spade-ast = { version = "0.13.0", default-features = false }

marlin-verilator = { path = "verilator", version = "0.3.2" }
marlin-verilog = { path = "language-support/verilog", version = "0.3.2" }
marlin-verilog-macro = { path = "language-support/verilog-macro", version = "0.3.2" }
marlin-verilog-macro-builder = { path = "language-support/verilog-macro-builder", version = "0.3.2" }
marlin-spade = { path = "language-support/spade", version = "0.3.2" }
marlin-spade-macro = { path = "language-support/spade-macro", version = "0.3.2" }
marlin-veryl = { path = "language-support/veryl", version = "0.3.2" }
marlin-veryl-macro = { path = "language-support/veryl-macro", version = "0.3.2" }

[workspace.metadata.release]
push = false
tag = false

[package]
name = "marlin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
verilog = []
spade = []
veryl = []

[dependencies]
marlin-verilator.workspace = true
marlin-verilog.workspace = true
marlin-verilog-macro.workspace = true
marlin-verilog-macro-builder.workspace = true
marlin-spade.workspace = true
marlin-spade-macro.workspace = true
marlin-veryl.workspace = true
marlin-veryl-macro.workspace = true
