[package]
name = "marlin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
verilog = []
spade = []

[dependencies]
marlin-verilator.workspace = true
marlin-verilog.workspace = true
marlin-verilog-macro.workspace = true
marlin-verilog-macro-builder.workspace = true
marlin-spade.workspace = true
marlin-spade-macro.workspace = true
