[package]
name = "test_crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
snafu.workspace = true
verilator = { path = "../verilator/" }

libloading = "0.8.6"
libc = "0.2.169"
