[package]
name = "verilator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
snafu.workspace = true
camino.workspace = true
libloading.workspace = true
