[package]
name = "marlin-verilator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
snafu.workspace = true
camino.workspace = true
libloading.workspace = true
log.workspace = true
libc.workspace = true
file-guard.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
dashmap.workspace = true
