[package]
name = "example-spade-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "simple_test"
path = "test/simple_test.rs"

[dependencies]
colog.workspace = true
snafu.workspace = true
spade.workspace = true
