[package]
name = "example-spade-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license = "GPL-3.0"

[[bin]]
name = "simple_test"
path = "test/simple_test.rs"

[dependencies]
snafu.workspace = true
colog.workspace = true
marlin = { path = "../../marlin", features = ["spade"] }
