[package]
name = "example-spade-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license = "GPL-3.0"

[dependencies]
snafu.workspace = true
env_logger.workspace = true
marlin = { path = "../../", features = ["spade"] }

[package.metadata.release]
release = false
publish = false
