[package]
name = "example-verilog-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license = "GPL-3.0"

[[bin]]
name = "tutorial"
path = "src/tutorial.rs"

[dependencies]
snafu.workspace = true
env_logger.workspace = true
marlin = { path = "../../", features = ["verilog"] }
