[package]
name = "spade"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
verilog.workspace = true
spade-macro = { path = "../spade-macro/" }
camino.workspace = true
snafu.workspace = true
log.workspace = true
