[package]
name = "marlin-spade"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
marlin-verilator.workspace = true
marlin-spade-macro.workspace = true
camino.workspace = true
snafu.workspace = true
log.workspace = true
toml.workspace = true
glob.workspace = true
libc.workspace = true
libloading.workspace = true
