[package]
name = "marlin-verilog-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
marlin-verilog-macro-builder.workspace = true
marlin-verilator.workspace = true
sv-parser.workspace = true
