[package]
name = "marlin-verilog"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
marlin-verilog-macro.workspace = true
marlin-verilator.workspace = true
libloading.workspace = true
