[package]
name = "marlin-veryl"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
marlin-verilator.workspace = true
marlin-verilog.workspace = true
marlin-veryl-macro.workspace = true
camino.workspace = true
snafu.workspace = true
log.workspace = true
libc.workspace = true
libloading.workspace = true
