[package]
name = "spade-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
verilog-macro-builder = { path = "../../verilog-support/verilog-macro-builder/" }
verilator.workspace = true
camino.workspace = true

proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true

spade-parser.workspace = true
spade-ast.workspace = true
