[package]
name = "spade"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
verilog = { path = "../../verilog-support/verilog/" }
spade-macro = { path = "../spade-macro/" }
camino.workspace = true
snafu.workspace = true
log.workspace = true
