[package]
name = "spade-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
verilog-macro-builder = { path = "../../verilog/verilog-macro-builder/" }
proc-macro2 = "1.0.93"
syn.workspace = true
quote = "1.0.38"
toml = "0.8.19"
camino.workspace = true
