[package]
name = "swim-marlin"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Parallel test runner for Marlin tests"
repository.workspace = true
readme = "README.md"
license = "GPL-3.0"

[dependencies]
snafu.workspace = true
camino.workspace = true
toml.workspace = true
argh.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
threadpool.workspace = true
