[package]
name = "example-verilog-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
snafu.workspace = true
colog.workspace = true
verilog.workspace = true
