[package]
name = "example-verilog-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "tutorial"
path = "src/tutorial.rs"

[[bin]]
name = "dynamic_model_tutorial"
path = "src/dynamic_model_tutorial.rs"

[[bin]]
name = "dpi_tutorial"
path = "src/dpi_tutorial.rs"

[dependencies]
snafu.workspace = true
colog.workspace = true
verilog.workspace = true
