[package]
name = "verilog-macro-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
verilator = { path = "../../verilator/" }
