[package]
name = "verilog-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
verilog-macro-builder = { path = "../verilog-macro-builder/" }
verilator = { path = "../../verilator/" }
sv-parser.workspace = true
