[package]
name = "verilog"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
verilog-macro = { path = "../verilog-macro" }
verilator.workspace = true
libc.workspace = true
libloading.workspace = true
