[package]
name = "verilog-macro-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = "1.0.93"
syn.workspace = true
quote = "1.0.38"
sv-parser = "0.13.3"
