[package]
name = "verilog-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
syn = "2.0.96"
quote = "1.0.38"
sv-parser = "0.13.3"
