[package]
name = "test_swim_crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
colog.workspace = true
snafu.workspace = true
spade = { path = "../../../spade-support/spade/" }
